# gvm-rs

./: .gitignore  CONTRIBUTING.md  Cargo.toml  Cross.toml  README.md  SECURITY.md
.github/: CODEOWNERS  clone-watch-allowlist.txt  dependabot.yml
.github/scripts/: clone-watch.sh
.github/workflows/: ci.yml  clone-watch.yml  release.yml  security.yml
install/: install.ps1  install.sh
src/: cli.rs  config.rs  dispatch.rs  fs.rs  http.rs  lock.rs  main.rs  profile.rs  resolver.rs  tempdir.rs  toolchain.rs  user_version.rs  version.rs
src/archive/: download.rs  extract.rs  mod.rs
src/commands/: bootstrap.rs  build.rs  completions.rs  current.rs  doctor.rs  env.rs  exec.rs  implode.rs  install.rs  list.rs  list_remote.rs  local_version.rs  mod.rs  outdated.rs  path.rs  prune.rs  setup.rs  shell.rs  uninstall.rs  upgrade.rs  use_version.rs
src/commands/install/: default_packages.rs  download.rs  extract.rs  mod.rs
src/remote/: index.rs  release.rs
src/shell/: bash.rs  fish.rs  mod.rs  zsh.rs
