[package]
name = "gvm"
version = "1.0.0"
edition = "2021"
description = "A fast, cross-platform Go version manager written in Rust"
license = "MIT"

[[bin]]
name = "gvm"
path = "src/main.rs"

[dependencies]
clap           = { version = "4",    features = ["derive", "color"] }
clap_complete  = "4"
ureq           = { version = "3",    features = ["rustls", "json"] }
serde          = { version = "1",    features = ["derive"] }
serde_json     = "1"
indicatif      = "0.18"
colored        = "3"
flate2         = "1"
tar            = "0.4"
zip            = "2"
dirs           = "6"
anyhow         = "1"
sha2           = "0.11"

[target.'cfg(windows)'.dependencies]
winreg = "0.52"

[dev-dependencies]
tempfile = "3"

[profile.release]
opt-level     = 3
lto           = true
strip         = true
codegen-units = 1
panic         = "abort"
