[package]
name = "gvm-rs"
version = "1.5.1"
edition = "2021"
description = "A fast, cross-platform Go version manager written in Rust"
license = "MIT"
repository = "https://github.com/jhonsferg/gvm-rs"
homepage = "https://github.com/jhonsferg/gvm-rs"
keywords = ["go", "golang", "version-manager", "toolchain", "gvm"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "gvm"
path = "src/main.rs"

[dependencies]
clap           = { version = "4",    features = ["derive", "color"] }
clap_complete  = "4"
ureq           = { version = "3",    features = ["rustls", "json"] }
serde          = { version = "1",    features = ["derive"] }
serde_json     = "1"
indicatif      = "0.18"
colored        = "3"
flate2         = "1"
tar            = "0.4"
zip            = "2"
dirs           = "6"
anyhow         = "1"
sha2           = "0.11"
fs2            = "0.4"
tempfile       = "3"

[target.'cfg(windows)'.dependencies]
winreg = "0.52"

[dev-dependencies]

[profile.release]
opt-level     = 3
lto           = true
strip         = true
codegen-units = 1
panic         = "abort"
